# lgrap_example2

./: .env.example  main.py  pyproject.toml  wb.ipynb
app/: api.py
app/agent/: graph.py  state.py
app/managers/: run_manager.py
app/prompts/: system.py
app/routes/: chat.py  models.py
app/schemas/: openai.py
app/tools/: calculator.py  registry.py  search.py  weather.py
app/utils/: config.py  context.py  streaming.py
db_app/: database.py
db_app/crud/: history.py  user.py
db_app/models/: __init__.py  chat_history.py  logs.py  user.py  user_settings.py
db_app/routes/: auth.py  history.py
db_app/schemas/: history.py
